# aspect-plugins

./: BUILD.bazel  CONTRIBUTING.md  README.md  WORKSPACE  go.mod  plugin.go
.aspect/cli/: config.yaml
.github/workflows/: release_notes.txt
release/: BUILD.bazel
